# fake_image_detection

./: .gitignore  README.md  TECHNICAL_ANALYSIS.md  app.py  commfor_inference.py  ela_inference.py  inference.py  main.py  openai_analysis.py  pyproject.toml
data/: IMG_9937.HEIC
